--- a/sign-in.html
+++ b/sign-in.html
@@ -197,10 +197,13 @@
                         </div>
                       </div>
                       <div class="signupbtn">
-                        <button class="btn form-control text-white">
-                          SIGN UP
-                        </button>
-                      </div>
+    <div class="signupbtn">
+    <a href="index.html">
+        <button class="btn form-control text-white">
+            SIGN UP
+        </button>
+    </a>
+</div>
                       <div class="text-center">
                         <button
                           class="btn name text-center"
