--- a/sign-in.html
+++ b/sign-in.html
@@ -240,11 +240,14 @@
                           />
                         </div>
                       </div>
-                      <div class="signinbtn my-4">
-                        <button class="btn form-control text-white">
-                          SIGN IN
-                        </button>
-                      </div>
+                                       <div class="signupbtn">
+    <div class="signupbtn">
+    <a href="index.html">
+        <button class="btn form-control text-white">
+            SIGN UP
+            <a href="index.html">        </button>
+    </a>
+</div>
                     </form>
                   </div>
                 </div>
