--- a/contact.html
+++ b/contact.html
@@ -86,8 +86,8 @@
               </li>
               <li class="nav-item pl-1">
                 <a
-                  class="btn_1 text-dark"
-                  style="border-color: green;"
+                  class="btn text-dark"
+                  style="border-color: rgb(58, 158, 58);"
                   href="./sign-in.html"
                   >Sign Up</a
                 >
