--- a/about.html
+++ b/about.html
@@ -31,7 +31,9 @@
               <span class="toggle"></span>
             </div>
             <a href="./index.html">
-              <img src="img/logo.png" width="200px" height="200px" alt="" style="top:400px;"  />
+              <a href="./index.html">
+                <img src="img/logo.png" width="200px" height="200px" alt="" style="top:400px;"  /> 
+            </a>
           </div>
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -40,12 +42,7 @@
                 <a class="nav-link nav-link1" href="./index.html">Home</a>
               </li>
               <li class="nav-item pl-1">
-                <a
-                  class="nav-link nav-link1"
-                  id="nav-active"
-                  href="./about.html"
-                  >About Us</a
-                >
+                <a class="nav-link nav-link1" href="./about.html">About Us</a>
               </li>
               <li class="nav-item pl-1">
                 <a class="nav-link nav-link1" href="./services.html"
@@ -75,10 +72,20 @@
                 </div>
               </li>
               <li class="nav-item pl-1">
-                <a class="nav-link nav-link1" href="./contact.html">Contact</a>
+                <a
+                  class="nav-link nav-link1"
+                  id="nav-active"
+                  href="./contact.html"
+                  >Contact</a
+                >
               </li>
               <li class="nav-item pl-1">
-                <a class="btn_1 text-white" href="./sign-in.html">Sign Up</a>
+                <a
+                  class="btn text-dark"
+                  style="border-color: rgb(58, 158, 58);"
+                  href="./sign-in.html"
+                  >Sign Up</a
+                >
               </li>
             </ul>
           </div>
@@ -89,9 +96,9 @@
       <div class="mobile-nav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="./index.html">Home</a>
+            <a class="nav-link" href="#">Home</a>
           </li>
-          <li class="nav-item current">
+          <li class="nav-item">
             <a class="nav-link" href="./about.html">About Us</a>
           </li>
           <li class="nav-item">
@@ -119,24 +126,19 @@
               >
             </div>
           </li>
-          <li class="nav-item">
+          <li class="nav-item current">
             <a class="nav-link" href="./contact.html">Contact</a>
           </li>
 
           <li class="nav-item">
             <a class="text-white nav-link" href="./sign-in.html">Sign In</a>
           </li>
-          <li class="nav-item pl-1">
-            <a
-              class="btn text-dark"
-              style="border-color: rgb(58, 158, 58);"
-              href="./sign-in.html"
-              >Sign Up</a
-            >
+          <li class="nav-item">
+            <a class="btn_1 text-white" href="./sign-in.html">Sign Up</a>
           </li>
         </ul>
       </div>
-    </header>
+    </header><br><br>
     <!-- Header end -->
 
     <!-- hero section -->
