--- a/faq.html
+++ b/faq.html
@@ -35,13 +35,15 @@
               <span class="toggle"></span>
             </div>
             <a href="./index.html">
-              <img src="img/logo.png" width="200px" height="200px" alt="" style="top:400px;"  />
+              <a href="./index.html">
+                <img src="img/logo.png" width="200px" height="200px" alt="" style="top:400px;"  /> 
+            </a>
           </div>
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto pr-lg-3">
               <li class="nav-item pl-1">
-                <a class="nav-link nav-link1" href="./index.html" id="nav-active">Home</a>
+                <a class="nav-link nav-link1" href="./index.html">Home</a>
               </li>
               <li class="nav-item pl-1">
                 <a class="nav-link nav-link1" href="./about.html">About Us</a>
@@ -74,10 +76,20 @@
                 </div>
               </li>
               <li class="nav-item pl-1">
-                <a class="nav-link nav-link1" href="./contact.html">Contact</a>
+                <a
+                  class="nav-link nav-link1"
+                  id="nav-active"
+                  href="./contact.html"
+                  >Contact</a
+                >
               </li>
               <li class="nav-item pl-1">
-                <a class="btn_1" style="color: #000; border-color: green;" href="./sign-in.html">Sign Up</a>
+                <a
+                  class="btn text-dark"
+                  style="border-color: rgb(58, 158, 58);"
+                  href="./sign-in.html"
+                  >Sign Up</a
+                >
               </li>
             </ul>
           </div>
@@ -87,7 +99,7 @@
       <!-- Mobile Nav -->
       <div class="mobile-nav">
         <ul class="navbar-nav">
-          <li class="nav-item current">
+          <li class="nav-item">
             <a class="nav-link" href="#">Home</a>
           </li>
           <li class="nav-item">
@@ -118,7 +130,7 @@
               >
             </div>
           </li>
-          <li class="nav-item">
+          <li class="nav-item current">
             <a class="nav-link" href="./contact.html">Contact</a>
           </li>
 
@@ -130,7 +142,7 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header><br><br>
     <!-- Header end -->
       <!-- Faq page starts here -->
       <div class="container faq">
