--- a/new-package.html
+++ b/new-package.html
@@ -30,118 +30,121 @@
       <div id="overlay"></div>
       <!-- Header start -->
       <header>
-        <div class="container my-4 px-0 mt-4 mb-4">
-          <nav class="navbar navbar-expand-md">
-            <div class="navbar-brand">
-              <div class="toggler">
-                <span class="toggle"></span>
-              </div>
+      <div class="container my-4 px-0 mt-4 mb-4">
+        <nav class="navbar navbar-expand-md">
+          <div class="navbar-brand">
+            <div class="toggler">
+              <span class="toggle"></span>
+            </div>
+            <a href="./index.html">
               <a href="./index.html">
-                <img src="img/logo.png" width="200px" height="200px" alt="" style="top:400px;"  />           </a>
-            </div>
+                <img src="img/logo.png" width="200px" height="200px" alt="" style="top:400px;"  /> 
+            </a>
+          </div>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav ml-auto pr-lg-3">
-                <li class="nav-item pl-1">
-                  <a class="nav-link nav-link1" href="./index.html">Home</a>
-                </li>
-                <li class="nav-item pl-1">
-                  <a
-                    class="nav-link nav-link1"
-                    id="nav-active"
-                    href="./about.html"
-                    >About Us</a
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto pr-lg-3">
+              <li class="nav-item pl-1">
+                <a class="nav-link nav-link1" href="./index.html">Home</a>
+              </li>
+              <li class="nav-item pl-1">
+                <a class="nav-link nav-link1" href="./about.html">About Us</a>
+              </li>
+              <li class="nav-item pl-1">
+                <a class="nav-link nav-link1" href="./services.html"
+                  >Services</a
+                >
+              </li>
+              <li class="nav-item dropdown pl-1">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  id="navbarDropdown"
+                  role="button"
+                  data-toggle="dropdown"
+                  aria-haspopup="true"
+                  aria-expanded="false"
+                >
+                  Package
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item p-3" href="./new-package.html"
+                    >Dispatch New Package</a
                   >
-                </li>
-                <li class="nav-item pl-1">
-                  <a class="nav-link nav-link1" href="./services.html"
-                    >Services</a
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item p-3" href="./track-package-form.html"
+                    >Track Package</a
                   >
-                </li>
-                <li class="nav-item dropdown pl-1">
-                  <a
-                    class="nav-link dropdown-toggle"
-                    href="#"
-                    id="navbarDropdown"
-                    role="button"
-                    data-toggle="dropdown"
-                    aria-haspopup="true"
-                    aria-expanded="false"
-                  >
-                    Package
-                  </a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item p-3" href="./new-package.html"
-                      >Dispatch New Package</a
-                    >
-                    <div class="dropdown-divider"></div>
-                    <a
-                      class="dropdown-item p-3"
-                      href="./track-package-form.html"
-                      >Track Package</a
-                    >
-                  </div>
-                </li>
-                <li class="nav-item pl-1">
-                  <a class="nav-link nav-link1" href="./contact.html"
-                    >Contact</a
-                  >
-                </li>
-                <li class="nav-item pl-1">
-                  <a class="btn_1 text-white" href="./sign-in.html">Sign Up</a>
-                </li>
-              </ul>
-            </div>
-          </nav>
-        </div>
+                </div>
+              </li>
+              <li class="nav-item pl-1">
+                <a
+                  class="nav-link nav-link1"
+                  id="nav-active"
+                  href="./contact.html"
+                  >Contact</a
+                >
+              </li>
+              <li class="nav-item pl-1">
+                <a
+                  class="btn text-dark"
+                  style="border-color: rgb(58, 158, 58);"
+                  href="./sign-in.html"
+                  >Sign Up</a
+                >
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
 
-        <!-- Mobile Nav -->
-        <div class="mobile-nav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="./index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./about.html">About Us</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./services.html">Services</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbarDropdown"
-                role="button"
-                data-toggle="dropdown"
-                aria-haspopup="true"
-                aria-expanded="false"
+      <!-- Mobile Nav -->
+      <div class="mobile-nav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./about.html">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./services.html">Services</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="navbarDropdown"
+              role="button"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              Package
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item p-3" href="./new-package.html"
+                >Dispatch New Package</a
               >
-                Package
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item p-3" href="./new-package.html"
-                  >Dispatch New Package</a
-                >
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item p-3" href="./track-package-form.html"
-                  >Track Package</a
-                >
-              </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./contact.html">Contact</a>
-            </li>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item p-3" href="./track-package-form.html"
+                >Track Package</a
+              >
+            </div>
+          </li>
+          <li class="nav-item current">
+            <a class="nav-link" href="./contact.html">Contact</a>
+          </li>
 
-            <li class="nav-item">
-              <a class="text-white nav-link" href="./sign-in.html">Sign In</a>
-            </li>
-            <li class="nav-item">
-              <a class="btn_1 text-white" href="./sign-in.html">Sign Up</a>
-            </li>
-          </ul>
-        </div>
-      </header>
+          <li class="nav-item">
+            <a class="text-white nav-link" href="./sign-in.html">Sign In</a>
+          </li>
+          <li class="nav-item">
+            <a class="btn_1 text-white" href="./sign-in.html">Sign Up</a>
+          </li>
+        </ul>
+      </div>
+    </header><br><br>
       <!-- Header end -->
 
       <div class="package-banner mt-5">
