--- a/sign-in.html
+++ b/sign-in.html
@@ -127,7 +127,7 @@
             <a class="text-white nav-link" href="./sign-in.html">Sign In</a>
           </li>
           <li class="nav-item">
-            <a class="btn_1 text-white" href="./sign-in.html">Sign Up</a>
+            <a class="btn_1 text-white" href="./new-package.html">Sign Up</a>
           </li>
         </ul>
       </div>
@@ -148,10 +148,10 @@
                     <p id="sign-up-btn" class="btns active">SIGN UP</p>
                     <div id="sign-up-line" class="line1"></div>
                   </div>
-                  <div class="col-5">
+                  <!-- <div class="col-5">
                     <p id="sign-in-btn" class="btns">SIGN IN</p>
                     <div id="sign-in-line" class="line2 d-none"></div>
-                  </div>
+                  </div> -->
                 </div>
                 <div
                   class="row"
@@ -198,9 +198,9 @@
                       </div>
                       <div class="signupbtn">
     <div class="signupbtn">
-    <a href="index.html">
+    <a class="btn_1 text-white" href="./new-package.html"></a>
         <button class="btn form-control text-white">
-            SIGN UP
+           <a class="btn_1 text-white" href="./new-package.html">Sign Up</a>
         </button>
     </a>
 </div>
