--- a/track-package-form.html
+++ b/track-package-form.html
@@ -36,7 +36,7 @@
       <!-- <source class="d-none d-xl-block img-fluid" src=""> -->
     </picture>
     <!-- Header start -->
-    <header>
+   <header>
       <div class="container my-4 px-0 mt-4 mb-4">
         <nav class="navbar navbar-expand-md">
           <div class="navbar-brand">
@@ -44,7 +44,9 @@
               <span class="toggle"></span>
             </div>
             <a href="./index.html">
-              <img src="img/logo.png" width="200px" height="120px" alt="" style="top:400px;"  /> 
+              <a href="./index.html">
+                <img src="img/logo.png" width="200px" height="200px" alt="" style="top:400px;"  /> 
+            </a>
           </div>
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -83,10 +85,20 @@
                 </div>
               </li>
               <li class="nav-item pl-1">
-                <a class="nav-link nav-link1" href="./contact.html">Contact</a>
+                <a
+                  class="nav-link nav-link1"
+                  id="nav-active"
+                  href="./contact.html"
+                  >Contact</a
+                >
               </li>
               <li class="nav-item pl-1">
-                <a class="btn_1 text-white" href="./sign-in.html">Sign Up</a>
+                <a
+                  class="btn text-dark"
+                  style="border-color: rgb(58, 158, 58);"
+                  href="./sign-in.html"
+                  >Sign Up</a
+                >
               </li>
             </ul>
           </div>
@@ -97,7 +109,7 @@
       <div class="mobile-nav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="./index.html">Home</a>
+            <a class="nav-link" href="#">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./about.html">About Us</a>
@@ -127,7 +139,7 @@
               >
             </div>
           </li>
-          <li class="nav-item">
+          <li class="nav-item current">
             <a class="nav-link" href="./contact.html">Contact</a>
           </li>
 
@@ -139,7 +151,7 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header><br><br>
     <!-- Header end -->
 
     <!-- content start -->
